--- a/digitalcard/index.html
+++ b/digitalcard/index.html
@@ -34,10 +34,10 @@
             <a href="mailto:snell.dallin@gmail.com">
                 <img src="images\contact\003-letter.png"    alt="Email">
             </a>
-            <a href="https://maps.apple.com/address=1500,E+Medical+Center+Drive,Ann+Arbor,Michigan">
+            <a href="maps:address=1500,E+Medical+Center+Drive,Ann+Arbor,Michigan">
                 <img src="images\contact\001-pin.png"       alt="Work location">
             </a>
-            <a href="https://scarhead.github.io/">
+            <a href="https://scarhead7.github.io/" target="_blank">
                 <img src="images\contact\006-web.png"       alt="Website">
             </a>
         </div>
