--- a/digitalcard/index.html
+++ b/digitalcard/index.html
@@ -25,6 +25,7 @@
             <h1 class="">Dallin Snell</h1>
         </div>
         <div class="contactme">
+            <h3>Contact</h3>
             <a href="tel:7026596499">
                 <img src="images\contact\002-call.png"      alt="Phone">
             </a>
@@ -39,6 +40,15 @@
             </a>
             <a href="https://scarhead7.github.io/" target="_blank">
                 <img src="images\contact\006-web.png"       alt="Website">
+            </a>
+        </div>
+        <div class="professional">
+            <h3>Professional</h3>
+            <a href="https://github.com/scarhead7">
+                <img src="images/contact/007-github.png"    alt="Github">
+            </a>
+            <a href="https://www.linkedin.com/in/snelldallin/">
+                <img src="images/contact/008-linkedin.png"    alt="LinkedIn">
             </a>
         </div>
         <div class="addme">
