--- a/digitalcard/index.html
+++ b/digitalcard/index.html
@@ -44,15 +44,15 @@
         </div>
         <div class="professional">
             <h3>Professional</h3>
-            <a href="https://github.com/scarhead7">
+            <a href="https://github.com/scarhead7" target="_blank">
                 <img src="images/contact/007-github.png"    alt="Github">
             </a>
-            <a href="https://www.linkedin.com/in/snelldallin/">
+            <a href="https://www.linkedin.com/in/snelldallin/" target="_blank">
                 <img src="images/contact/008-linkedin.png"    alt="LinkedIn">
             </a>
         </div>
         <div class="addme">
-            <a href="">
+            <a href="files/Snell,D.vcard">
                 <img src="images\contact\005-add-contact.png"   alt="Add contact">
             </a>
         </div>
