--- a/digitalcard/index.html
+++ b/digitalcard/index.html
@@ -1,5 +1,5 @@
 <!--    Snell, Dallin
-        CREATED 051122 AUG 2022 UPDATED 05 AUG 2022
+        CREATED 051122 AUG 2022 UPDATED 10 OCT 2022
         This will be the page for my digital business card.
 
         Social media/contact icons courtesy of https://www.flaticon.com/.
@@ -32,10 +32,10 @@
             <a href="sms:7026596499">
                 <img src="images\contact\004-chat.png"      alt="Text">
             </a>
-            <a href="mailto:snell.dallin@gmail.com">
+            <a href="mailto:dsnell@chelsea.k12.mi.us">
                 <img src="images\contact\003-letter.png"    alt="Email">
             </a>
-            <a href="maps:address=1500,E+Medical+Center+Drive,Ann+Arbor,Michigan">
+            <a href="maps:address=445,Mayer+Drive,Chelsea,Michigan">
                 <img src="images\contact\001-pin.png"       alt="Work location">
             </a>
             <a href="https://scarhead7.github.io/" target="_blank">
