--- a/about/about.html
+++ b/about/about.html
@@ -1,5 +1,5 @@
 <!-- Snell, Dallin
-    11 NOV 2017
+    CREATED 11 NOV 2017 UPDATED 10 OCT 2022
     About Me page
  -->
 
@@ -61,11 +61,12 @@
         <h4><a href="/cheese/cheese.html">Random Cheese Facts!</a></h4>
         <h4><a href="/squirrels/squirrels.html">Some squirrels.</a></h4>
         <h4><a href="/inspiration/inspiration.html">If you need some inspiration.</a></h4>
+        <h4><a href="https://scarhead7.github.io/digitalcard/">Contact Me</a></h4>
       </div>
     </div>
     <footer class="pad">
       <div class="right-align">
-        <p>Updated: 08 FEB 2019</p>
+        <p>Updated: 10 OCT 2022</p>
       </div>
     </footer>
   </body>
