--- a/digitalcard/index.html
+++ b/digitalcard/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="contactme">
             <h3>Contact</h3>
-            <a href="tel:7026596499">
+            <a href="tel:7344332205">
                 <img src="images\contact\002-call.png"      alt="Phone">
             </a>
             <a href="sms:7026596499">
@@ -35,7 +35,7 @@
             <a href="mailto:dsnell@chelsea.k12.mi.us">
                 <img src="images\contact\003-letter.png"    alt="Email">
             </a>
-            <a href="maps:address=445,Mayer+Drive,Chelsea,Michigan">
+            <a href="maps:address=335,Pierce+Street,Chelsea,Michigan">
                 <img src="images\contact\001-pin.png"       alt="Work location">
             </a>
             <a href="https://scarhead7.github.io/" target="_blank">
